# SA-MP-MySQL

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindMySQLCAPI.cmake
src/: CCallback.cpp  CCallback.hpp  CConnection.cpp  CConnection.hpp  CHandle.cpp  CLog.cpp  CLog.hpp  CMakeLists.txt  COptions.hpp  COrm.cpp  COrm.hpp  CQuery.cpp  CQuery.hpp  main.cpp  misc.hpp  natives.cpp  natives.hpp  sdk.hpp
